--- a/ProjetoPET/Views/Produto/Index.cshtml
+++ b/ProjetoPET/Views/Produto/Index.cshtml
@@ -4,56 +4,77 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Propaganda</h2>
-
+<h1>Propaganda</h1>
 <p>
     <a asp-action="Create">Criar</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Banner)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Descricao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FotoPath)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedData)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Banner)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FotoPath)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedData)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="row">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Banner)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Descricao)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FotoPath)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CreatedDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.UpdatedData)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                var photoPath = "~/images/Produtos/" + (item.FotoPath ?? "imagem.png");
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Banner)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Descricao)
+                    </td>
+                    <td>
+                        <div style="max-width: 540px;">
+                            <div class=" row no-gutters">
+                                <img src="@photoPath " asp-append-version="true" style="width:100%;height:100%;" />
+                            </div>
+                        </div>
+                        @Html.DisplayFor(modelItem => item.FotoPath)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreatedDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UpdatedData)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+@*<div class="row">
+    @foreach (var item in Model)
+    {
+        var photoPath = "~/images/Produtos/" + (item.FotoPath ?? "imagem.png");
+        <div class=" card col-md-6 form-check-group">
+            <div style="max-width: 540px;">
+                <div class=" row no-gutters">
+                    <img src="@photoPath " asp-append-version="true" style="width:100%;height:100%;" />
+                </div>
+            </div>
+        </div>
+    }
+</div>*@
