--- a/ProjetoPET/Views/Anuncio/Create.cshtml
+++ b/ProjetoPET/Views/Anuncio/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjetoPET.Models.Anuncio
+﻿@model ProjetoPET.ViewModel.AnuncioViewModel
 
 @{
     ViewData["Title"] = "Cadastrar anúncio";
@@ -8,13 +8,13 @@
 
 <h4>Dados</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4 offset-4">
-        <form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
+    <div class="row">
+        <div class="col-md-6">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Foto" class="control-label"></label>
-                <input type="file" asp-for="Foto" class="form-control-file border" />
+                <input asp-for="Foto" class="form-control-file border" />
                 <span asp-validation-for="Foto" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -29,20 +29,86 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="TipoAnuncioId" class="control-label"></label>
+                <select asp-for="TipoAnuncioId" class="form-control" asp-items="ViewBag.TipoAnuncioId"></select>
+                <span asp-validation-for="TipoAnuncioId" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="PetId" class="control-label"></label>
                 <select asp-for="PetId" class="form-control" asp-items="ViewBag.PetId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index" class="btn btn-sm btn-info">Voltar para Listagem</a>
-</div>
+            <div class="form-group">
+                <label asp-for="EstadoId" class="control-label"></label>
+                <select asp-for="EstadoId" class="form-control" asp-items="ViewBag.EstadoId"></select>
+                <span asp-validation-for="EstadoId" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="CidadeId" class="control-label"></label>
+                <select asp-for="CidadeId" class="form-control" asp-items="ViewBag.CidadeId"></select>
+                <span asp-validation-for="CidadeId" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="col-md-6">
+
+            <div class="form-group">
+                <label asp-for="Rua" class="control-label"></label>
+                <input asp-for="Rua" class="form-control" />
+                <span asp-validation-for="Rua" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Numero" class="control-label"></label>
+                <input asp-for="Numero" class="form-control" />
+                <span asp-validation-for="Numero" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Cep" class="control-label"></label>
+                <input asp-for="Cep" class="form-control" />
+                <span asp-validation-for="Cep" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Bairro" class="control-label"></label>
+                <input asp-for="Bairro" class="form-control" />
+                <span asp-validation-for="Bairro" class="text-danger"></span>
+            </div>
+
+
+            
+        </div>
+    </div>
+    <div class="form-group text-right">
+        <input type="submit" value="Salvar" class="btn btn-primary" />
+        <a asp-action="Index" class="btn btn-sm btn-info">Voltar para Listagem</a>
+    </div>
+</form>
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
+<script>
+    $("#EstadoId").on("change", function () {
+        $list = $("#CidadeId");
+        $.ajax({
+            url: "GetCidades/" + $("#EstadoId").val(),
+            type: "GET",
+            success: function (result) {
+
+                $list.empty();
+                result.forEach((item) => {
+                    $list.append('<option value="' + item.id + '"> ' + item.nome + ' </option>');
+                });
+            },
+            error: function () {
+                alert("Erro ocorreu no processamento");
+            }
+        });
+
+    });
+</script>
