--- a/ProjetoPET/Views/Anuncio/Edit.cshtml
+++ b/ProjetoPET/Views/Anuncio/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjetoPET.Models.Anuncio
+﻿@model ProjetoPET.ViewModel.AnuncioViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -31,17 +31,6 @@
                 <label asp-for="PetId" class="control-label"></label>
                 <select asp-for="PetId" class="form-control" asp-items="ViewBag.PetId"></select>
                 <span asp-validation-for="PetId" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedData" class="control-label"></label>
-                <input asp-for="UpdatedData" class="form-control" />
-                <span asp-validation-for="UpdatedData" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
