--- a/ProjetoPET/Views/Lojas/Delete.cshtml
+++ b/ProjetoPET/Views/Lojas/Delete.cshtml
@@ -3,13 +3,14 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<h4>Lojas</h4>
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3><center>Are you sure you want to delete this?</center></h3>
 <div class="row">
-    <h4>Lojas</h4>
-    <hr />
+    <br />
+    
+ @*<hr />
     
         <dt>
             @Html.DisplayNameFor(model => model.NomeLoja)
@@ -100,7 +101,7 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UpdatedData)
-        </dd>
+        </dd>*@
    
     
     <form asp-action="Delete">
