--- a/ProjetoPET/Views/Lojas/Details.cshtml
+++ b/ProjetoPET/Views/Lojas/Details.cshtml
@@ -10,101 +10,63 @@
 <div>
     <h4>Lojas</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            <img src="@photoPath" width="200" height="200" asp-append-version="true" />
 
-            @Html.DisplayNameFor(model => model.NomeLoja)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NomeLoja)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.RazaoSocial)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.RazaoSocial)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CNPj)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CNPj)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Endereco)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Endereco)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Numero)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Numero)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Bairro)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Bairro)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Complemento)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Complemento)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CEP)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CEP)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Cidade)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Cidade)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Telefone)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Telefone)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ImagePath)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ImagePath)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedData)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedData)
-        </dd>
-    </dl>
-</div>
+    <dt>
+        <img src="@photoPath" width="200" height="200" asp-append-version="true" />
+
+        
+    </dt>
+    <div class="form-group">
+
+        <div><label>
+    @Html.DisplayNameFor(model => model.NomeLoja)
+       </label>
+       <label> @Html.DisplayFor(model => model.NomeLoja)</label></div>
+
+        <div><label> @Html.DisplayNameFor(model => model.RazaoSocial)</label>
+             <label>@Html.DisplayFor(model => model.RazaoSocial)</label></div>
+
+       <div><label>@Html.DisplayNameFor(model => model.CNPj)  </label>
+            <label>@Html.DisplayFor(model => model.CNPj)</label></div>
+
+          <div><label>@Html.DisplayNameFor(model => model.Endereco) </label>
+               <label>@Html.DisplayFor(model => model.Endereco)</label></div>
+
+        <div><label>  @Html.DisplayNameFor(model => model.Numero)</label>
+             <label>@Html.DisplayFor(model => model.Numero)</label></div>
+
+            <div><label> @Html.DisplayNameFor(model => model.Bairro)</label>
+                 <label>@Html.DisplayFor(model => model.Bairro)</label></div>
+
+            <div><label>@Html.DisplayNameFor(model => model.Complemento)</label>
+                 <label>@Html.DisplayFor(model => model.Complemento)</label></div>
+        
+            <div><label>@Html.DisplayNameFor(model => model.CEP)</label>
+                 <label> @Html.DisplayFor(model => model.CEP)</label></div>
+
+        <div><label>@Html.DisplayNameFor(model => model.Estado)</label>
+             <label> @Html.DisplayFor(model => model.Estado)</label></div>
+        </div>
+            
+            <div><label>@Html.DisplayNameFor(model => model.Cidade)</label>
+                 <label> @Html.DisplayFor(model => model.Cidade)</label></div>
+  
+    <div><label> @Html.DisplayNameFor(model => model.Telefone)</label>
+         <label>@Html.DisplayFor(model => model.Telefone)</label></div>
+           
+        <div><label> @Html.DisplayNameFor(model => model.Email)</label>
+             <label> @Html.DisplayFor(model => model.Email)</label></div>
+           
+        <div><label>@Html.DisplayNameFor(model => model.ImagePath)</label>
+             <label> @Html.DisplayFor(model => model.ImagePath)</label></div>
+       
+    <div><label> @Html.DisplayNameFor(model => model.CreatedDate)</label>
+         <label>@Html.DisplayFor(model => model.CreatedDate)</label></div>
+           
+    <div><label>@Html.DisplayNameFor(model => model.UpdatedData)</label>
+         <label> @Html.DisplayFor(model => model.UpdatedData)</label></div>
+       
+    </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
