--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         </div>
         <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row ">
 
                     <div class="col-6 col-xl-2">
                         <h1 class="mb-0 site-logo"><a class="h2 mb-0"><strong>Projeto</strong>PET<span class="text-primary">.</span> </a></h1>
@@ -105,7 +105,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="row pt-5 mt-5 text-center">
+                <div class="row pt-5 mt-5 ">
                     <div class="col-md-12">
                         <div class="border-top pt-5">
                             <p>
