--- a/ProjetoPET/Views/Shared/_LayoutTour.cshtml
+++ b/ProjetoPET/Views/Shared/_LayoutTour.cshtml
@@ -63,21 +63,21 @@
 
         </header>
 
-        @*<section class="site-section">
+        <section class="site-section">
             <div class="container">
                 @RenderBody()
             </div>
-        </section>*@        
+        </section>        
 
-        <div class="site-blocks-cover bg-light" data-aos="fade">
-            <div class="container">
+        @*<div class="site-blocks-cover bg-light" data-aos="fade">
+            <div class="container" >
                 <div class="row align-items justify-content-center">
-                    <div style="margin-top:200px;" class="col-md-12 mt-lg-5 text-center">
+                    <div class="col-md-12 mt-lg-5 text-center">
                         @RenderBody()
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <footer class="site-footer">
             <div class="container">
