--- a/ProjetoPET/Views/Lojas/Create.cshtml
+++ b/ProjetoPET/Views/Lojas/Create.cshtml
@@ -3,18 +3,18 @@
 @{
     ViewData["Title"] = "Create";
 }
-    <h2>Create</h2>
+    <h2>Cadastrar nova Loja</h2>
 
-    <h4>Lojas</h4>
+
 
            <form enctype="multipart/form-data" asp-action="Create" class="col-md-12">
                <div class="form-row" >
                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                   <div class="form-group col-md-12"s>
+                   <div class="form-group col-md-12" s>
                        <label asp-for="NomeLoja" class="control-label"></label>
                        <input asp-for="NomeLoja" class="form-control" />
                        <span asp-validation-for="NomeLoja" class="text-danger"></span>
-
+                       
                    </div>
                    <div class="form-group col-md-6">
                        <label asp-for="RazaoSocial" class="control-label"></label>
@@ -83,7 +83,7 @@
         </form>
  
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Voltar para tela de lojas</a>
     </div>
 
 @section Scripts {
