--- a/ProjetoPET/Views/Lojas/Delete.cshtml
+++ b/ProjetoPET/Views/Lojas/Delete.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewData["Title"] = "Delete";
 }
-<h4>Lojas</h4>
-<h2>Delete</h2>
 
-<h3><center>Are you sure you want to delete this?</center></h3>
+<h2>Excluir</h2>
+
+<h3><center>Deseja Excluir esse arquivo?</center></h3>
 <div class="row">
     <br />
     
@@ -106,7 +106,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-default" /> |
+        <a asp-action="Index">Voltar</a>
     </form>
 </div>
