--- a/ProjetoPET/Views/Lojas/Details.cshtml
+++ b/ProjetoPET/Views/Lojas/Details.cshtml
@@ -5,10 +5,10 @@
      var photoPath = "~/images/LojasPhotos/" + (Model.ImagePath ?? "imagem.png");
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>Lojas</h4>
+    
     <hr />
 
     <dt>
