--- a/ProjetoPET/Views/Lojas/Edit.cshtml
+++ b/ProjetoPET/Views/Lojas/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar </h2>
 
-<h4>Lojas</h4>
+
 <hr />
 
    
@@ -75,7 +75,7 @@
         </div>
         <div class="form-group col-md-12">
             <label asp-for="ImagePath" class="control-label"></label>
-            <input asp-for="ImagePath" class="form-control" />
+            <input asp-for="ImagePath" class="form-control" type="file"/>
             <span asp-validation-for="ImagePath" class="text-danger"></span>
         </div>
         <input type="hidden" asp-for="Id" />
