--- a/ProjetoPET/Views/Lojas/Index.cshtml
+++ b/ProjetoPET/Views/Lojas/Index.cshtml
@@ -14,7 +14,7 @@
 
 <p>
     
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar nova Loja</a>
 </p>
 
 
@@ -33,10 +33,10 @@
         <div class="col-md-6 form-group ">
            
 
-            <div class="card md-8" style="max-width: 540px;">
+            <div class="card md-8" style="max-width: 500px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="@photoPath" asp-append-version="true" style="width:100%;height:100%"/>
+                        <img src="@photoPath" asp-append-version="true" style="width:150px;height:280px;"/>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -52,10 +52,8 @@
                             <p>
                                 <i class="fas fa-envelope"></i>  @Html.DisplayFor(modelItem => item.Email)
                             </p>
-                            <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                            <a asp-action="Details" asp-route-id="@item.Id">Visualizar</a> |
-                            <a asp-action="Delete" asp-route-id="@item.Id">Excluir</a>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ExemploModalCentralizado" onclick='pinar("@item.Endereco,@item.Numero.ToString(),@item.Cidade")'>
+                            
+                            <button type="button" class="btn btn-primary" onclick='pinar("@item.Endereco,@item.Numero.ToString(),@item.Cidade")'>
                                 Visualizar Localização
                             </button>
 
@@ -67,27 +65,28 @@
 
         </div>
 
-        <div class="modal fade" id="ExemploModalCentralizado" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="TituloModalCentralizado">Título do modal</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div id="map_canvas" style="width: 95%; height: 432px"></div>
+        
+    }
 
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                        
-                    </div>
-                </div>
+</div>
+
+
+<div class="modal fade" id="ExemploModalCentralizado">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="TituloModalCentralizado">Título do modal</h5>
+            </div>
+            <div class="modal-body">
+                <div id="map_canvas" style="width: 95%; height: 432px"></div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+
             </div>
         </div>
-    }
+    </div>
 </div>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAA8hwz5MoE8hs1FwRnJVMhcTQZZVGp9iw&libraries=places&callback=initAutocomplete" async defer></script>
 
@@ -128,6 +127,11 @@
                 map.setCenter(results[0].geometry.location);
             }
         });
+
+        
+
+        $("#ExemploModalCentralizado").modal();
+        $('.modal-backdrop').removeClass("modal-backdrop");    
     }
   
      
