--- a/ProjetoPET/Views/Shared/_LayoutTour.cshtml
+++ b/ProjetoPET/Views/Shared/_LayoutTour.cshtml
@@ -76,13 +76,13 @@
 
         </header>
 
-        @*<section class="site-section">
+        <section class="site-section">
             <div class="container">
                 @RenderBody()
             </div>
-        </section>*@        
+        </section>        
 
-        <div class="site-blocks-cover bg-light" data-aos="fade">
+        @*<div class="site-blocks-cover bg-light" data-aos="fade">
             <div class="container">
                 <div class="row ">
                     <div class="col-md-12 mt-lg-5 ">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <footer class="site-footer">
             <div class="container">
